[tool.poetry]
name = "CyberFortress"  
version = "0.1.0"          
description = "A cool Python project"
authors = ["X99874 <youremail@example.com>"]  

# Python sürümü
dependencies = [
    "requests",  
    "numpy",     
]

dev-dependencies = [
    "pytest",  
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
